policies/kyverno/cluster/01-deny-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-latest-tag
  annotations:
    policies.kyverno.io/title: Deny Latest Tag
    policies.kyverno.io/category: Supply Chain
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: deny-latest
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
      validate:
        message: "Using the :latest tag is not allowed."
        pattern:
          spec:
            =(ephemeralContainers):
              - image: "!*:latest"
            =(initContainers):
              - image: "!*:latest"
            containers:
              - image: "!*:latest"
