policies/tests/resources/deny-latest-tag.yaml
apiVersion: v1
kind: Pod
metadata:
  name: latest-tag-pod
  namespace: boutique-dev
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
  containers:
    - name: app
      image: acrboutiquedevgwc.azurecr.io/frontend:latest
      securityContext:
        runAsNonRoot: true
        privileged: false
