policies/tests/resources/deny-non-acr-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-acr-pod
  namespace: boutique-dev
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
  containers:
    - name: app
      image: docker.io/library/nginx:1.25
      securityContext:
        runAsNonRoot: true
        privileged: false
