policies/tests/resources/deny-privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
  namespace: boutique-dev
spec:
  containers:
    - name: app
      image: acrboutiquedevgwc.azurecr.io/frontend@sha256:0000000000000000000000000000000000000000000000000000000000000001
      securityContext:
        privileged: true
